# password-generator-rs

./: Cargo.toml
gui/: Cargo.toml
gui/src/: main.rs  ui.rs
non-gui/src/: main.rs
pwd_gen/: README.md
pwd_gen/gui/: Cargo.toml
pwd_gen/gui/src/: generator.rs  main.rs  settings.rs  ui.rs  utils.rs
src/: main.rs
