[package]
name = "pwd_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["wincon", "winuser"]}

[dependencies]
rand = "0.8.5"
eframe = "0.18.0"
clipboard = "0.5.0"
magic-crypt = "3.1.10"
dirs = "4.0.0"
rusty_pool = "0.7.0"
rayon = "1.5.3"